<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/backgroundColor">

    <!-- Header -->
    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="@dimen/header_padding_top"
        android:paddingBottom="@dimen/header_padding_bottom"
        android:text="@string/header_text"
        android:textColor="@color/headerTextColor"
        android:textSize="@dimen/header_text_size" />

    <!-- Instructional Text -->
    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_text"
        android:textColor="@color/instructionsTextColor"
        android:paddingBottom="@dimen/instructions_padding_bottom"
        android:textSize="@dimen/body_text_size" />

    <!-- Name Label and Input -->
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/labelColor"
        android:paddingBottom="@dimen/label_padding_bottom"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/txtNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:background="@drawable/input_border"
        android:textColor="@color/inputTextColor"
        android:padding="@dimen/input_padding" />

    <!-- Email Label and Input -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/labelColor"
        android:paddingTop="@dimen/field_padding_top"
        android:paddingBottom="@dimen/label_padding_bottom"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_border"
        android:textColor="@color/inputTextColor"
        android:padding="@dimen/input_padding" />

    <TextView
        android:id="@+id/complaintTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complaint_type_label"
        android:textColor="@color/labelColor"
        android:paddingTop="@dimen/field_padding_top"
        android:paddingBottom="@dimen/label_padding_bottom"
        android:textSize="@dimen/label_text_size" />

    <Spinner
        android:id="@+id/complaintTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/complaint_types"
        android:padding="@dimen/input_padding" />
    <!-- Message Label and Input -->
    <TextView
        android:id="@+id/messageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_label"
        android:textColor="@color/labelColor"
        android:paddingTop="@dimen/field_padding_top"
        android:paddingBottom="@dimen/label_padding_bottom"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:gravity="top"
        android:background="@drawable/input_border"
        android:hint="@string/message_hint"
        android:inputType="textMultiLine"
        android:padding="@dimen/input_padding"
        android:textColor="@color/inputTextColor" />

    <!-- Buttons Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="@dimen/button_container_padding_top">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button_text"
            android:backgroundTint="@color/resetButtonColor"
            android:textColor="@color/buttonTextColor"
            android:layout_marginEnd="@dimen/button_spacing" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button_text"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/buttonTextColor" />
    </LinearLayout>

</LinearLayout>
